css and html additions

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -67,8 +67,38 @@ h1, h2, h3, h4, h5 {
 
 
 .navigation{
-    color:red;
+
 }
+
+.section1{
+
+}
+
+.section2{
+
+    }
+
+.contact{
+
+}
+
+.code{
+border-radius:10px;
+
+}
+.logo{
+    text-size:10px;
+}
+
+img{
+
+
+}
+
+footer{
+
+}
+
 
 
 
